<resources>
    <string name="welcome">Welcome to</string>
    <string name="app_name">Basic Kotlin</string>
    <string name="move_activity">Move Activity</string>
    <string name="move_with_data">Move Activity with Data</string>
    <string name="move_with_object">Move Activity with Object</string>
    <string name="move_with_object_layout">Move Activity with Object Layout</string>
    <string name="dial_number">Dial a Number</string>
    <string name="move_with_result">Move Activity for Result</string>
    <string name="result_from_activity">Result of the Activity</string>
    <string name="choose_number">Choose number that you like</string>
    <string name="_40">40</string>
    <string name="_80">80</string>
    <string name="_120">120</string>
    <string name="_200">200</string>
    <string name="choose">Pilih</string>
    <string name="data_received">Data received</string>
    <string name="object_received">Object received</string>
    <string name="this_is_moveactivity">This MoveActivity</string>

    <string name="specification">Spesifikasi</string>
    <string name="display">Display</string>
    <string name="size">Size</string>
    <string name="battery">Battery</string>
    <string name="seller">Dijual oleh</string>
    <string name="buy">Beli</string>
    <string name="dummy_photos">6 photos</string>
    <string name="content_text">Google officially announced its much-anticipated Pixel phones; the Pixel and Pixel XL, on October 4. We attended Google’s London UK event, mirroring the main one taking place in San Francisco, US, where the firm unwrapped the new Android 7.1 Nougat devices which will apparently usurp Google’s long-standing Nexus series.</string>
    <string name="content_specs_display">5.0 inches\n
    FHD AMOLED at 441ppi\n
    2.5D Corning® Gorilla® Glass 4</string>
    <string name="content_specs_size">5.6 x 2.7 x 0.2 ~ 0.3 inches 143.8 x 69.5 x 7.3 ~ 8.5 mm</string>
    <string name="content_specs_battery">2,770 mAh battery\n
    Standby time (LTE): up to 19 days\n
    Talk time (3g/WCDMA): up to 26 hours\n
    Internet use time (Wi-Fi): up to 13 hours\n
    Internet use time (LTE): up to 13 hours\n
    Video playback: up to 13 hours\n
    Audio playback (via headset): up to 110 hours\n
    Fast charging: up to 7 hours of use from only 15 minutes of charging</string>
    <string name="title">Google Pixel</string>
    <string name="my_name">Larry Page</string>
    <string name="dummy_value">810</string>

    <string name="image_description">Image Desc</string>
</resources>